templates/vpc.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creates a VPC for the EKS Cluster'

Parameters:
  EnvAlias:
    Type: String
    Default: ''
  EnvHash:
    Type: String
    Default: ''
  PermissionsBoundary:
    Type: String
    Default: ''
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC.
    Type: String
  PrivateSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.0.0/19
    Description: CIDR block for private subnet 1, located in Availability Zone 1.
    Type: String
  PrivateSubnet2CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.32.0/19
    Description: CIDR block for private subnet 2, located in Availability Zone 2.
    Type: String
  PublicSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.128.0/20
    Description: CIDR block for the public (DMZ) subnet 1, located in Availability Zone 1.
    Type: String
  PublicSubnet2CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.144.0/20
    Description: CIDR block for the public (DMZ) subnet 2, located in Availability Zone 2.
    Type: String
  S3Bucket:
    Type: String
    Default: ''
  DomainRGName:
    Description: Domain Rule Group Name.
    Default: CRWD-Demo-Domain-rg
    Type: String

Conditions:
  PermissionsBoundary: !Not [ !Equals [ !Ref PermissionsBoundary, '' ] ]

Resources:
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/InternetGateway"
        - Key: cstag-account
          Value: dev
        - Key: cstag-business
          Value: Sales
        - Key: cstag-product
          Value: Host Platform
        - Key: cstag-department
          Value: Sales-310000
        - Key: cstag-owner
          Value: cnap-workshop

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NATIP
          - AllocationId
      SubnetId:
        Ref: "PublicSubnet1"
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/NATGateway"
        - Key: cstag-account
          Value: dev
        - Key: cstag-business
          Value: Sales
        - Key: cstag-product
          Value: Host Platform
        - Key: cstag-department
          Value: Sales-310000
        - Key: cstag-owner
          Value: cnap-workshop

  NATIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/NATIP"
        - Key: cstag-account
          Value: dev
        - Key: cstag-business
          Value: Sales
        - Key: cstag-product
          Value: Host Platform
        - Key: cstag-department
          Value: Sales-310000
        - Key: cstag-owner
          Value: cnap-workshop

  NATPrivateSubnet1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGateway
      RouteTableId:
        Ref: "PrivateRouteTable1"

  NATPrivateSubnet2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGateway
      RouteTableId:
        Ref: "PrivateRouteTable2"

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/PrivateRouteTable1"
      VpcId:
        Ref: VPC

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/PrivateRouteTable2"
      VpcId:
        Ref: VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/PublicRouteTable"
      VpcId:
        Ref: VPC

  PublicSubnetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicRouteTable
    DependsOn:
      - VPCGatewayAttachment

  RouteTableAssociationPrivate1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: "PrivateRouteTable1"
      SubnetId:
        Ref: "PrivateSubnet1"

  RouteTableAssociationPrivate2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: "PrivateRouteTable2"
      SubnetId:
        Ref: "PrivateSubnet2"

  RouteTableAssociationPublic1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: "PublicSubnet1"

  RouteTableAssociationPublic2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: "PublicSubnet2"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/SubnetPrivate1"
      VpcId:
        Ref: VPC

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/SubnetPrivate2"
      VpcId:
        Ref: VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/Publicsubnet1"
      VpcId:
        Ref: VPC

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: Name
          Value:
            Fn::Sub: "${AWS::StackName}/Publicsubnet2"
      VpcId:
        Ref: VPC

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "Kubernetes VPC"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: InternetGateway
      VpcId:
        Ref: VPC

  FlowLogRole:
    Type: 'AWS::IAM::Role'
    Properties:
      PermissionsBoundary:
        Fn::If:
          - PermissionsBoundary
          - !Sub 'arn:aws:iam::${AWS::AccountId}:policy/${PermissionsBoundary}'
          - Ref: AWS::NoValue
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: 'vpc-flow-logs.amazonaws.com'
            Action: 'sts:AssumeRole'
      Policies:
        - PolicyName: 'flowlogs-policy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'logs:CreateLogGroup'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                  - 'logs:DescribeLogGroups'
                  - 'logs:DescribeLogStreams'
                Resource: !GetAtt 'LogGroup.Arn'
  LogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join [ '', [ !Ref 'AWS::StackName', '-vpc-flow-log' ] ]
      RetentionInDays: 1
      Tags:
        - Key: cstag-account
          Value: dev
        - Key: cstag-business
          Value: Sales
        - Key: cstag-product
          Value: Host Platform
        - Key: cstag-department
          Value: Sales-310000
        - Key: cstag-owner
          Value: cnap-workshop
  FlowLog:
    Type: 'AWS::EC2::FlowLog'
    Properties:
      DeliverLogsPermissionArn: !GetAtt 'FlowLogRole.Arn'
      LogGroupName: !Join [ '', [ !Ref 'AWS::StackName', '-vpc-flow-log' ] ]
      ResourceId: !Ref VPC
      ResourceType: 'VPC'
      TrafficType: 'ALL'
      Tags:
        - Key: cstag-account
          Value: dev
        - Key: cstag-business
          Value: Sales
        - Key: cstag-product
          Value: Host Platform
        - Key: cstag-department
          Value: Sales-310000
        - Key: cstag-owner
          Value: cnap-workshop
#  AddDomainToRGTarget:
#    Type: Custom::ActionTarget
#    Version: 1.0
#    Properties:
#      ServiceToken: !GetAtt CreateActionTargetLambdaFunction.Arn
#      Name: !Join
#        - '-'
#        - - !Ref 'AWS::StackName'
#          - AddDomainToRGFromFinding
#      Description: Adds Domain name from finding to network firewall resource group
#      Id: DomaintoNetFwRG
#  CreateActionTargetLambdaFunction:
#    Type: AWS::Lambda::Function
#    Properties:
#      FunctionName: !Join
#        - '-'
#        - - !Ref 'AWS::StackName'
#          - CreateActionTarget
#      Description: Custom resource to create an action target in Security Hub
#      Handler: create_action_target.lambda_handler
#      MemorySize: 256
#      Role: !GetAtt CreateActionTargetLambdaRole.Arn
#      Runtime: python3.7
#      Timeout: 60
#      Code:
#        S3Bucket: !Ref
#        S3Key: create_action_target.zip
#  CreateActionTargetLambdaRole:
#    Type: AWS::IAM::Role
#    Properties:
#      PermissionsBoundary:
#        Fn::If:
#          - PermissionsBoundary
#          - !Sub 'arn:aws:iam::${AWS::AccountId}:policy/${PermissionsBoundary}'
#          - Ref: AWS::NoValue
#      Policies:
#        - PolicyName: CreateActionTarget-LambdaPolicy
#          PolicyDocument:
#            Version: 2012-10-17
#            Statement:
#              - Effect: Allow
#                Action:
#                  - cloudwatch:PutMetricData
#                Resource: '*'
#              - Effect: Allow
#                Action:
#                  - logs:CreateLogGroup
#                  - logs:CreateLogStream
#                  - logs:PutLogEvents
#                Resource: '*'
#              - Effect: Allow
#                Action:
#                  - securityhub:CreateActionTarget
#                  - securityhub:DeleteActionTarget
#                Resource: '*'
#      AssumeRolePolicyDocument:
#        Version: 2012-10-17
#        Statement:
#          - Effect: Allow
#            Principal: { Service: lambda.amazonaws.com }
#            Action:
#              - sts:AssumeRole
#  AddDomainToRGTargetEventRule:
#    Type: AWS::Events::Rule
#    Properties:
#      Name: AddDomainToRGTargetEventRule
#      Description: "Remediates CIS Checks 1.5 through 1.11 by establishing a CIS Compliant Strong Password Policy"
#      EventPattern:
#        source:
#          - aws.securityhub
#        detail-type:
#          - Security Hub Findings - Custom Action
#        resources:
#          - !GetAtt AddDomainToRGTarget.Arn
#      State: "ENABLED"
#      Targets:
#        - Arn:
#            Fn::GetAtt:
#              - "AddDomainToRGLambdaFunction"
#              - "Arn"
#          Id: "CIS_1-5-11_RR_CWE"
#    # Lambda function to add the AWS Network Firewall
#  AddDomainToRGLambdaFunction:
#    Type: AWS::Lambda::Function
#    Properties:
#      Environment:
#        Variables:
#          DEBUG_LEVEL: 'INFO'
#          fw_domain_rg_name: !Ref DomainRGName
#      Code:
#        S3Bucket: !Ref S3Bucket
#        S3Key: add_finding_domain_to_rg.zip
#      Layers:
#        - !Ref lambdaLayer
#      Handler: add_finding_domain_to_rg.lambda_handler
#      MemorySize: 128
#      Role: !GetAtt AddDomaintoRGLambdaRole.Arn
#      Runtime: python3.7
#      Timeout: 60
#  #
#  lambdaLayer:
#    Type: AWS::Lambda::LayerVersion
#    Properties:
#      CompatibleRuntimes:
#        - python3.7
#      Content:
#        S3Bucket: !Ref S3Bucket
#        S3Key: falconpy-layer.zip
#      Description: Layer for falconpy package
#      LayerName: requests-package
#  AddDomaintoRGLambdaRole:
#    Type: AWS::IAM::Role
#    Properties:
#      PermissionsBoundary:
#        Fn::If:
#          - PermissionsBoundary
#          - !Sub 'arn:aws:iam::${AWS::AccountId}:policy/${PermissionsBoundary}'
#          - Ref: AWS::NoValue
#      RoleName: !Join
#        - '-'
#        - - !Ref 'AWS::StackName'
#          - AddDomaintoRGLambdaRole
#      AssumeRolePolicyDocument:
#        Version: '2012-10-17'
#        Statement:
#          - Effect: Allow
#            Principal:
#              Service: lambda.amazonaws.com
#            Action: sts:AssumeRole
#            Condition: { }
#      Path: /
#      Policies:
#        - PolicyName: Get_Values
#          PolicyDocument:
#            Version: '2012-10-17'
#            Statement:
#              - Sid: VisualEditor1
#                Effect: Allow
#                Action:
#                  - network-firewall:DescribeRuleGroup
#                  - network-firewall:CreateRuleGroup
#                  - network-firewall:UpdateRuleGroup
#                Resource: '*'
#      ManagedPolicyArns:
#        - arn:aws:iam::aws:policy/AWSLambdaExecute
Outputs:
  VpcId:
    Value: !Ref VPC
  VpcCIDROut:
    Value: !Ref VPCCIDR
  PublicSubnet1CIDROut:
    Value: !Ref PublicSubnet1CIDR
  SubnetPrivate1:
    Value: !Ref "PrivateSubnet1"
  SubnetPrivate2:
    Value: !Ref "PrivateSubnet2"
  SubnetPublic1:
    Value: !Ref "PublicSubnet1"
  SubnetPublic2:
    Value: !Ref "PublicSubnet2"
  NATGatewayEIP:
    Value: !Ref "NATIP"
